--- a/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationHome.storyboard
+++ b/OpticalValleyUnite/Classes/UI/DecorationAdmin/ViewController/YQDecorationHome.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Decoration HomeVC-->
         <scene sceneID="ih0-np-hLr">
             <objects>
-                <viewController id="bwr-kx-YXr" sceneMemberID="viewController">
+                <viewController id="bwr-kx-YXr" customClass="YQDecorationHomeVC" customModule="OpticalValleyUnite" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="HSq-Ok-mb7"/>
                         <viewControllerLayoutGuide type="bottom" id="wui-m3-48e"/>
@@ -22,21 +22,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A5N-dH-UYu">
-                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0g-xO-9zc">
-                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="64"/>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0g-xO-9zc">
+                                        <rect key="frame" x="0.0" y="0.0" width="187.5" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="待处理">
                                             <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <state key="selected">
+                                            <color key="titleColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="stateButtonClick:" destination="bwr-kx-YXr" eventType="touchUpInside" id="49c-NJ-YD8"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1p6-Hc-Q0E">
-                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="64"/>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1p6-Hc-Q0E">
+                                        <rect key="frame" x="187.5" y="0.0" width="187.5" height="50"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <state key="normal" title="已处理">
                                             <color key="titleColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
+                                        <state key="selected">
+                                            <color key="titleColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="stateButtonClick:" destination="bwr-kx-YXr" eventType="touchUpInside" id="NqS-v7-Z0r"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,12 +61,16 @@
                                     <constraint firstAttribute="trailing" secondItem="1p6-Hc-Q0E" secondAttribute="trailing" id="QOh-Nl-Nqr"/>
                                     <constraint firstItem="1p6-Hc-Q0E" firstAttribute="width" secondItem="e0g-xO-9zc" secondAttribute="width" id="kgc-Cf-brA"/>
                                     <constraint firstItem="e0g-xO-9zc" firstAttribute="top" secondItem="A5N-dH-UYu" secondAttribute="top" id="nSd-NW-tpu"/>
-                                    <constraint firstAttribute="height" constant="64" id="wcP-dE-hgi"/>
+                                    <constraint firstAttribute="height" constant="50" id="wcP-dE-hgi"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMC-AP-VsA">
-                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="bwr-kx-YXr" id="50t-13-Evh"/>
+                                    <outlet property="delegate" destination="bwr-kx-YXr" id="Yyf-lZ-yww"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -68,6 +84,11 @@
                             <constraint firstAttribute="trailing" secondItem="YMC-AP-VsA" secondAttribute="trailing" id="zQU-jO-fNa"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="alreadlyButton" destination="1p6-Hc-Q0E" id="Pqv-Nf-sXL"/>
+                        <outlet property="pendingButton" destination="e0g-xO-9zc" id="ocp-sn-4ev"/>
+                        <outlet property="tableView" destination="YMC-AP-VsA" id="eUq-Wj-bvb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5S8-Pq-BL3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
